src/snapshots/afrotd__parser__tests__interpretation_8.7.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 7
  - 2
index: 2
text: "Ein Team A-Kick berührt den Boden und ein Team B-Spieler\nschlägt den Ball über Team B’s Goalline, wo ein Team B-Spieler den Ball\nam Boden liegend recovert oder der Ball ins Aus geht."
ruling: "Team\nB gibt dem Ball einen neuen Antrieb. Safety, zwei Punkte für Team A.\nDas Wegschlagen des Kicks, nachdem dieser den Boden berührt hat,\nbedeutet, dass damit der Antrieb des Kicks beendet ist und dem Ball\nein neuer Antrieb gegeben wurde. Jedoch das einfache Berühren oder\nReflektieren des Kicks, oder wenn der Kick jemanden streift, bedeutet\nnicht, dass der Antrieb des Kicks beendet wurde (Regel 8.5.1.a)."
