src/snapshots/afrotd__parser__tests__interpretation_9.1.10_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 10
index: 1
text: "Bei einem Vorwärtspass-Spiel blockt A75 B66 hinter der neutralen Zone. Während A75 B66 weiterhin berührt, blockt A47 anschließend\nB66 an dessen Oberschenkeln."
ruling: Chop Block. Strafe - 15 Meter vom Previous Spot.
