src/snapshots/afrotd__parser__tests__interpretation_9.1.10_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 10
index: 3
text: "Unmittelbar nach dem Snap blocken der linke Guard A65 und\nder linke Tackle A79 gleichzeitig B66, der sich in der neutralen Zone\nbefindet. (a) Beide Kontakte sind an den Oberschenkeln. (b) Ein Kontakt ist an der Gürtellinie und der andere an den Knien."
ruling: "(a)\nLegale Blocks wegen der tief/tief kombinierten Blocks. (b) Foul, Chop\nBlock."
