src/snapshots/afrotd__parser__tests__interpretation_9.1.10_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 10
index: 4
text: "Tight End A87 und Wingback A43 fungieren als Vorblocker für\nden Ballträger, als beide gleichzeitig Linebacker B17 blocken, der sich\ndrei Meter downfield befindet. (a) Beide Blocks sind über der Gürtellinie. (b) Ein Block ist über der Gürtellinie, der andere an den Knien."
ruling: "(a) Legale Blocks. (b) Foul, Chop Block."
