src/snapshots/afrotd__parser__tests__interpretation_9.1.14_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 14
index: 1
text: "A10 steht in einer „Shotgun“ ähnlichen Formation 7,5 m hinter dem Snapper, der seinen Kopf gesenkt hält und zwischen seinen\nBeinen zurückschaut. Unmittelbar nach dem Snap greift Nose Guard\nB55 den Snapper direkt an und berührt ihn, indem er ihn zurückdrückt."
ruling: "Legal. Dem Snapper wird kein spezieller Schutz zugesprochen, weil Team A sich nicht in einer Scrimmage Kick-Formation befindet, da A10 sich nicht wenigstens 10 Meter hinter der neutralen Zone\nbefindet (Regel 2.16.10). Der Snapper hat den üblichen Schutz gegen\njedes persönliche Foul."
