src/snapshots/afrotd__parser__tests__interpretation_9.1.14_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 14
index: 2
text: "Team A befindet sich offensichtlich in einer Scrimmage KickFormation. Unmittelbar nach dem Snap greift Nose Guard B55 direkt\nden Snapper an, berührt ihn und drückt ihn zurück. Der Ball wird zu\neinem Backfieldspieler, drei Meter hinter der Scrimmage Line oder zum\npotentiellen Kicker gesnappt, der statt zu kicken mit dem Ball läuft oder\ndiesen wirft."
ruling: "Foul. Strafe – 15 Meter und automatisches First\nDown. Der Snapper darf nicht angegriffen werden, bevor eine Sekunde\nnach dem Snap vergangen ist, wenn Team A sich in einer Scrimmage\nKick- Formation aufgestellt hat."
